--- a/src/Components/aboutMe/AboutMe.css
+++ b/src/Components/aboutMe/AboutMe.css
@@ -611,6 +611,7 @@
     display: -ms-grid;
     display: grid;
     height: 80vh;
+    height: calc(var(--vh, 1vh) * 80);
     -ms-grid-columns: 90vw;
         grid-template-columns: 90vw;
     -ms-grid-rows: 90% 10%;
@@ -648,6 +649,7 @@
     right: -45vw;
     width: 55vw;
     height: 39vh;
+    height: calc(var(--vh, 1vh) * 39);
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-right .aboutme-folder-container {
     height: calc(220px - 15vw);
