--- a/src/Components/aboutMe/AboutMe.css
+++ b/src/Components/aboutMe/AboutMe.css
@@ -56,7 +56,7 @@
   grid-row-gap: 1vw;
   margin-left: 3vw;
   padding: 0;
-  font-size: calc(20px - 0.1vh - .1vw);
+  font-size: calc(20px - calc(var(--vh, 1vh) * .1) - .1vw);
   font-weight: bold;
 }
 
@@ -605,6 +605,7 @@
   }
   .aboutme-container .aboutme-header {
     margin: 5vh 1vw 1vh 1vw;
+    margin: calc(var(--vh, 1vh) * 5) 1vw calc(var(--vh, 1vh) * 1) 1vw;
     font-size: 11vmin;
   }
   .aboutme-container .aboutme-content-conatiner {
@@ -640,12 +641,12 @@
     display: none;
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-summary {
-    font-size: calc(4px + 1.2vh + .05vw);
+    font-size: calc(4px + calc(var(--vh, 1vh) * 1.2) + .05vw);
     width: 100%;
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-right {
     position: relative;
-    bottom: calc(85.5px + 16vh);
+    bottom: calc(85.5px + calc(var(--vh, 1vh) * 16));
     right: -45vw;
     width: 55vw;
     height: 39vh;
@@ -656,6 +657,7 @@
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-right .aboutme-folder-container .aboutme-foldericon {
     margin: auto 1vw 2vh auto;
+    margin: auto 1vw calc(var(--vh, 1vh) * 2) auto;
     size: 50%;
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-right .folder-cap {
