--- a/src/Components/contact/Contact.css
+++ b/src/Components/contact/Contact.css
@@ -62,6 +62,7 @@
 .contact-container .contact-content-container .contact-left .contact-form-container .contact-form-top .email-input {
   height: 10%;
   width: 100%;
+  font-size: calc(27px + .2vmax);
   margin: 5% auto;
 }
 
