--- a/src/Components/contact/Contact.scss
+++ b/src/Components/contact/Contact.scss
@@ -69,7 +69,7 @@
             .email-input {
               height: 10%;
               width: 100%;
-              
+              font-size: calc(27px + .2vmax);
               margin: 5% auto;
             }
 
