--- a/src/Components/contact/Contact.scss
+++ b/src/Components/contact/Contact.scss
@@ -72,6 +72,13 @@
               font-size: calc(27px + .2vmax);
               margin: 5% auto;
             }
+            .tel-input {
+              height: 10%;
+              width: 100%;
+              font-size: calc(27px + .2vmax);
+              margin: 5% auto;
+            }
+
 
             .contact-radio-buttons {
               margin: 6% auto;
