Same Keyboard Err different test

--- a/src/Components/contact/Contact.css
+++ b/src/Components/contact/Contact.css
@@ -8,6 +8,7 @@
 }
 
 .contact-container {
+  min-height: -webkit-fill-available;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
   font-family: Michroma;
@@ -152,7 +153,7 @@
     background-color: rgba(128, 128, 128, 0.798);
     margin: 0px auto;
     width: calc(403px + 6vmax);
-    height: 85%;
+    height: 110%;
   }
   .contact-container .contact-content-container .contact-left .contact-form-container form .contact-form-bottom {
     width: 100%;
