Updates to Responsive design

--- a/src/Components/contact/Contact.scss
+++ b/src/Components/contact/Contact.scss
@@ -35,7 +35,7 @@
       grid-template-columns: 45vw 55vw;
       grid-template-rows: 80%;
       overflow: hidden;
-      height: 80%;
+      height: 90%;
       margin: auto;
 
 
@@ -48,15 +48,14 @@
 
         
         .contact-form-container {
-         // background-color: orange;
-
+        //  background-color: orange;
+          // height: 100%;
 
           .contact-form-top {
             font-size: calc(20px - 0.1vh - .1vw);
             background-color: rgba(128, 128, 128, 0.498);
             width: 60%;
-            height: 70%;
-            margin: 5vh auto 0 auto;
+            height: 60%;
             margin: calc(var(--vh, 1vh) * 5) auto 0 auto;
             border: black 3px solid;
             padding: 1%;
@@ -184,7 +183,7 @@
               background-color: rgba(128, 128, 128, 0.798);
               margin: 0px auto;
               width: calc(403px + 6vmax);
-              height: 110%;              
+              height: 100%;              
             }
 
             .contact-form-bottom {
